--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,9 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-nunito;
+    @apply bg-background font-nunito text-foreground;
+  }
+  #root {
+    @apply flex h-screen flex-col;
   }
 }
